--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -53,30 +53,267 @@
     </div>
 
     <div class="ui segment">
-
       <div class="ui grid">
-
-        <div class="sixteen wide column ">
-
-          <table id="datatable" class="ui small celled table aligned hover">
+        <div class="sixteen wide column">
+          <table id="datatable" style="width: 100%;" class="ui small collapsing celled table aligned hover">
             <thead>
               <tr>
+                <th style="text-align: center !important">#</th>
                 <th style="text-align: center !important">ลำดับ</th>
                 <th style="text-align: center !important">ชื่อหน่อยงาน</th>
                 <th style="text-align: center !important">หน่วยรับตรวจ</th>
                 <th style="text-align: center !important">วันที่</th>
                 <th style="text-align: center !important">ด้าน</th>
                 <th style="text-align: center !important">Action</th>
-
               </tr>
-
             </thead>
             <tbody>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>1</td>
+                <td>หน่วยงาน ก</td>
+                <td>หน่วยรับตรวจ a</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>2</td>
+                <td>หน่วยงาน ข</td>
+                <td>หน่วยรับตรวจ b</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>3</td>
+                <td>หน่วยงาน ค</td>
+                <td>หน่วยรับตรวจ c</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>4</td>
+                <td>หน่วยงาน ง</td>
+                <td>หน่วยรับตรวจ d</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>5</td>
+                <td>หน่วยงาน จ</td>
+                <td>หน่วยรับตรวจ e</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>6</td>
+                <td>หน่วยงาน ก</td>
+                <td>หน่วยรับตรวจ a</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>7</td>
+                <td>หน่วยงาน ข</td>
+                <td>หน่วยรับตรวจ b</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>8</td>
+                <td>หน่วยงาน ค</td>
+                <td>หน่วยรับตรวจ c</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>9</td>
+                <td>หน่วยงาน ง</td>
+                <td>หน่วยรับตรวจ d</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>10</td>
+                <td>หน่วยงาน จ</td>
+                <td>หน่วยรับตรวจ e</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>11</td>
+                <td>หน่วยงาน ก</td>
+                <td>หน่วยรับตรวจ a</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>12</td>
+                <td>หน่วยงาน ข</td>
+                <td>หน่วยรับตรวจ b</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>13</td>
+                <td>หน่วยงาน ค</td>
+                <td>หน่วยรับตรวจ c</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>14</td>
+                <td>หน่วยงาน ง</td>
+                <td>หน่วยรับตรวจ d</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="aligned center">
+                  <div class="ui fitted checkbox">
+                    <input type="checkbox">
+                    <label></label>
+                  </div>
+                </td>
+                <td>15</td>
+                <td>หน่วยงาน จ</td>
+                <td>หน่วยรับตรวจ e</td>
+                <td>6/6/2561</td>
+                <td>ด้าน1</td>
+                <td>
+                  <a>Export</a>
+                </td>
+              </tr>
             </tbody>
           </table>
-
         </div>
-
+        <div class="two wide column centered column" style="margin-top: -59px;">
+          <button class="fluid ui red mini button">ลบ</button>
+        </div>
       </div>
     </div>
   </div>
