Change Base Entity

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -27,7 +27,7 @@
             </button>
           </div>
           <div class="field">
-            <button type="button" style="margin-left: auto" class="ui mini primary button right floated" [routerLink]="['/int02/3']">
+            <button type="button" style="margin-left: auto" class="ui mini primary button right floated" (click)="deleteHeaderQuestionnaire()">
               <i class="delete icon"></i>
               ลบ
             </button>
