--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-03/ts01-03.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-03/ts01-03.component.html
@@ -28,7 +28,7 @@
                   <div class="ui calendar" style="width:100%" id="date1">
                     <div class="ui input left icon">
                       <i class="calendar icon"></i>
-                      <input type="text"  placeholder="วัน/เดือน/ปี">
+                      <input type="text"  placeholder="วัน เดือน ปี">
                     </div>
                   </div>
                 </div>
@@ -236,7 +236,7 @@
                   <div class="ui calendar" style="width: 100%" id="date2">
                     <div class="ui input left icon">
                       <i class="calendar icon"></i>
-                      <input type="text"  placeholder="วัน/เดือน/ปี">
+                      <input type="text"  placeholder="วัน เดือน ปี">
                     </div>
                   </div>
                 </div>
