--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_03.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/mis_t_s_01_03.jrxml
@@ -919,7 +919,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Top"/>
-				<textFieldExpression><![CDATA[$P{time}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{time}+"น."]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="data" x="32" y="285" width="64" height="14" uuid="04a5d091-af4a-459f-884e-0743f58db9d7"/>
@@ -1266,8 +1266,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="TH Sarabun New" size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA["	      " + ($P{with} == null ? "" : $P{with} )
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["	      " + ($P{with} == null ? "" : $P{with} )]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
