--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -33,7 +33,7 @@
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="four wide field "></div>
+          <div class="two wide field "></div>
           <div class="two wide field ">
             <label>ปีงบประมาณ</label>
           </div>
@@ -44,19 +44,32 @@
               <option value="2">2559</option>
             </select>
           </div>
+          <div class="two wide field ">
+            <label>ปัจจัยเสี่ยง</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui search dropdown">
+              <option value="0">ปัจจัยเสี่ยงงบประมาณ </option>
+
+            </select>
+          </div>
         </div>
       </div>
       <br>
 
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="uploadData()">
+          <button class="ui mini primary button" (click)="searchDataTable()">
             <i class="add icon"></i>
-            สร้างกระดาษทำการ
+            ค้นหา
           </button>
           <button class="ui mini button" (click)="clearData()">
             <i class="refresh icon"></i>
             ล้างข้อมูล
+          </button>
+          <button class="ui mini primary button" routerLink="/int08/1/4">
+            <i class="add icon"></i>
+            สร้าง
           </button>
         </div>
       </div>
