--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -92,7 +92,7 @@
     <app-ts01-14-2 *ngIf="sent && selectedTop == 'ตส. 01-14/2'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-14-2>
 
-    <app-ts01-17 *ngIf="sent && selectedTop == 'ตส. 01-17'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    <app-ts01-17 *ngIf="sent && selectedTop == 'ตส. 01-17/1'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-17>
 
     <app-ts01-15 *ngIf="sent && selectedTop == 'ตส. 01-15'" (discard)="onDiscard($event)" class="sixteen wide column segments">
