--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -125,7 +125,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04-9">กระดาษทำการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
+                                                            <a href="javascript:;" routerLink="/ope04/9">กระดาษทำการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
                                                         </div>
                                                     </div>
                                                 </div>
