--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-17/ts01-17.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-17/ts01-17.component.html
@@ -1,3 +1,5 @@
+<form (submit)="onSubmit($event)" ngNativeValidate>
+
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>หนังสือแจ้งผลการตรวจสอบภาษี ณ สถานประกอบการ</span>
 </div>
@@ -14,19 +16,19 @@
             <p>วันที่ : </p>
           </div>
           <div class="two wide field">
-            <input type="text">
+            <input type="text" name="date1" [(ngModel)]="obj.date1">
           </div>
           <div class="one wide field" style="padding-right: 0px;">
             <p>เดือน : </p>
           </div>
           <div class="two wide field">
-            <input type="text">
+            <input type="text" name="month1" [(ngModel)]="obj.month1">
           </div>
           <div class="one wide field">
             <p>ปี : </p>
           </div>
           <div class="two wide field">
-            <input type="text">
+            <input type="text" name="buddhist1" [(ngModel)]="obj.buddhist1">
           </div>
         </div>
 
@@ -35,17 +37,17 @@
             <p>ที่ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="at1" [(ngModel)]="obj.at1">
             <p style="padding-right: 14px">/</p>
-            <input type="text">
+            <input type="text"name="at2" [(ngModel)]="obj.at2">
           </div>
           <div class="three wide field">
             <p>อ้างถึงหนังสือเลขที่ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="at3" [(ngModel)]="obj.at3">
             <p style="padding-right: 14px">/</p>
-            <input type="text">
+            <input type="text" name="at4" [(ngModel)]="obj.at4">
           </div>
         </div>
 
@@ -53,14 +55,14 @@
           <div class="two wide field">
             <p>เรียน : </p>
           </div>
-          <div class="six wide field">
-            <input type="text">
+          <div class="five wide field">
+            <input type="text" name="study1" [(ngModel)]="obj.study1">
           </div>
           <div class="two wide field">
             <p>ลงวันที่ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="date2" [(ngModel)]="obj.date2">
           </div>
         </div>
 
@@ -69,15 +71,15 @@
             <p>ออกตรวจสถานประกอบการเมื่อวันที่ : </p>
           </div>
           <div class="three wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="four wide field">
             <p>ตามหนังสือนำออกตรวจที่ : </p>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
             <p style="padding-right: 14px">/</p>
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -86,37 +88,80 @@
             <p>ณ สถานประกอบการ : </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="four wide field">
             <p>เลขทะเบียนสรรพสามิต : </p>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
-
         <div class="inline fields">
           <div class="three wide field">
-            <p>ตั้งอยู่เลขที่ : </p>
+            <label>สถานที่ตั้งเลขที่</label>
           </div>
-          <div class="thirteen wide field">
-            <textarea name="" id="" cols="30" rows="3" style="resize: none;"></textarea>
+          <div class="five wide field">
+            <input type="text"  name="homeNumber" [(ngModel)]="obj.homeNumber"   >
           </div>
-        </div>
+          <div class="two wide field">
+              <label>ตรอก/ซอย</label>
+          </div>
+          <div class="six wide field">
+            <input type="text"  name="byWay" [(ngModel)]="obj.byWay"   >
+          </div>
+      </div>
 
+      <div class="inline fields">
+          <div class="three wide field">
+            <label>ถนน</label>
+          </div>
+          <div class="five wide field">
+            <input type="text"  name="street" [(ngModel)]="obj.street"   >
+          </div>
+          <div class="two wide field">
+              <label>ตำบล/แขวง</label>
+          </div>
+          <div class="six wide field">
+            <input type="text"  name="tambol" [(ngModel)]="obj.tambol"   >
+          </div>
+      </div>
+      
+      <div class="inline fields">
+          <div class="three wide field">
+            <label>อำเภอ/เขต</label>
+          </div>
+          <div class="five wide field">
+            <input type="text"  name="district" [(ngModel)]="obj.district"   >
+          </div>
+          <div class="two wide field">
+              <label>จังหวัด</label>
+          </div>
+          <div class="six wide field">
+            <input type="text"  name="province" [(ngModel)]="obj.province"   >
+          </div>
+      </div>
+
+      <div class="inline fields">
+          <div class="three wide field">
+            <label>รหัสไปรษณีย์</label>
+          </div>
+          <div class="five wide field">
+            <input type="text"  name="zipCode" [(ngModel)]="obj.zipCode"   >
+          </div>
+      </div>
         <div class="inline fields">
           <div class="three wide field">
             <p>ผู้นำการตรวจ : </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="two wide field">
             <p>ตำแหน่ง : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -125,13 +170,13 @@
             <p>ระหว่างรอบการยื่นชำระภาษีเดือน : </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field centered aligned">
             <p>ถึง</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -140,7 +185,7 @@
             <p>ผลการตรวจสอบตามบันทึกคำให้การ (ตส.๐๔-๐๖) ลงวันที่ </p>
           </div>
           <div class="seven wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>ดังนี้</p>
@@ -155,7 +200,7 @@
 
         <div class="inline fields">
           <div class="sixteen wide field">
-            <textarea cols="30" rows="2" style="resize: none;"></textarea>
+            <textarea cols="30" rows="2" style="resize: none;" name="homeNumber" [(ngModel)]="obj.homeNumber"></textarea>
           </div>
         </div>
 
@@ -167,7 +212,7 @@
 
         <div class="inline fields">
           <div class="sixteen wide field">
-            <textarea cols="30" rows="2" style="resize: none;"></textarea>
+            <textarea cols="30" rows="2" style="resize: none;" name="homeNumber" [(ngModel)]="obj.homeNumber"></textarea>
           </div>
         </div>
 
@@ -176,7 +221,7 @@
             <p>๓. จากประเด็นความผิดข้างต้น ทำให้</p>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="seven wide field">
             <p> ต้องมีภาระความรับผิดชอบในค่าภาษีสรรพสามิต ดังนี้</p>
@@ -189,7 +234,7 @@
             <p>ภาษีสรรพสามิต</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -202,7 +247,7 @@
             <p>เบี้ยปรับ ตามมาตรา ๑๔๐</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -215,7 +260,7 @@
             <p>เงินเพิ่ม ตามมาตรา ๑๔๑</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -228,7 +273,7 @@
             <p>รวม</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -241,7 +286,7 @@
             <p>ภาษีเพื่อราชการส่วนท้องถิ่น ตามมาตรา ๑๕๐</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -254,7 +299,7 @@
             <p>รวมทั้งสิ้น</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="one wide field">
             <p>บาท</p>
@@ -266,7 +311,7 @@
             <p>หมายเหตุ เงินเพิ่มคิดถึงวันที่</p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -275,13 +320,13 @@
             <p>ให้ท่านชำระภาษี ณ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="two wide field">
             <p>ภายในวันที่ : </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -296,13 +341,13 @@
             <p>ส่งมอบให้เจ้าหน้าที่ ณ :</p>
           </div>
           <div class="four wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="two wide field">
             <p>ในวันที่ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -311,22 +356,22 @@
             <p>เวลา : </p>
           </div>
           <div class="eight wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="two wide field">
+          <div class="two wide field">๓
             <p>ผู้รับผิดชอบ : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
           <div class="two wide field">
             <p>หน่วยงาน : </p>
           </div>
           <div class="six wide field">
-            <input type="text">
+            <input type="text" name="homeNumber" [(ngModel)]="obj.homeNumber">
           </div>
         </div>
 
@@ -339,7 +384,7 @@
 <div class="ui bottom centered attached segment">
   <div class="ui center aligned grid">
     <div class="eight wide column">
-      <button class="ui mini green button" type="button">
+      <button class="ui mini green button" type="submit">
         <i class="save icon"></i>
         พิมพ์เอกสาร
       </button>
@@ -350,3 +395,4 @@
     </div>
   </div>
 </div>
+</form>
