--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -27,7 +27,10 @@
           </div>
           <div class="eight wide field">&nbsp;&nbsp;&nbsp;
             <label class="custom-label-w-20">ด้าน</label>
-            <input [(ngModel)]="departmentNameChecking" class="custom">
+            <select class="ui search selection dropdown full" name="sideName" id="sideName" [(ngModel)]="sideName">
+              <option value="">ด้าน</option>
+              <option *ngFor="let list of sideNameArr" ng-value="list.value">{{list.description}}</option>
+            </select>
           </div>
         </div>
 
